Stopped tracking env.local, and env.staging
